@@ -11,64 +11,6 @@ describe Raca::Server do
   }
 
   before(:each) do
-    stub_request(:get, "https://the-cloud.com/account/servers").with(
-      :headers => {
-        'Accept'=>'application/json',
-        'Content-Type'=>'application/json',
-        'X-Auth-Token'=>'token'
-      }
-    ).to_return(:status => 200, :body => '{"servers":[{"id":123,"name":"server1"}]}')
-
-    stub_request(:get, "https://the-cloud.com/account/flavors").with(
-      :headers => {
-        'Accept'=>'application/json',
-        'Content-Type'=>'application/json',
-        'X-Auth-Token'=>'token'
-      }
-    ).to_return(
-      :status => 200,
-      :body => JSON.dump({flavors: [{id:1,name:"256 server"},{id:2,name:"512 server"}]})
-    )
-
-    stub_request(:get, "https://the-cloud.com/account/images").with(
-      :headers => {
-        'Accept'=>'application/json',
-        'Content-Type'=>'application/json',
-        'X-Auth-Token'=>'token'
-      }
-    ).to_return(
-      :status => 200,
-      :body => JSON.dump(
-        {images:[{id:112,name:"Ubuntu 10.04 LTS"},{id:104,name:"Debian 6 (Squeeze)"}]}
-      )
-    )
-
-    stub_request(:post, "https://the-cloud.com/account/servers").with(
-      :headers => {
-        'Accept'=>'application/json',
-        'Content-Type'=>'application/json',
-        'X-Auth-Token'=>'token'
-      }
-    ).to_return(
-      :status => 200,
-      :body => JSON.dump(
-        {server:
-          {progress:0,
-           id:456,
-           imageId:112,
-           flavorId:2,
-           status:"BUILD",
-           adminPass:"server20efH35xMP",
-           name:"server2",
-           hostId:"663c67e3f3f6b8b402e7d6be06d0a08e",
-           addresses:{
-            public:["108.171.178.15"],
-            private:["10.179.133.145"]
-          },
-          metadata:{}}
-        }
-      )
-    )
 
     stub_request(:get, "https://the-cloud.com/account/servers/123").with(
       :headers => {
@@ -109,135 +51,37 @@ describe Raca::Server do
 
     context "with an existing server" do
       let!(:server) {
-        Raca::Server.new(account, :ord, "server1")
+        Raca::Server.new(account, :ord, "123")
       }
-      it 'should set the server_name atttribute' do
-        server.server_name.should == 'server1'
-      end
 
       it 'should set the server_id atttribute' do
-        server.server_id.should == 123
+        server.server_id.should == "123"
       end
     end
 
-    context "with an new server" do
-      let!(:server) {
-        Raca::Server.new(account, :ord, "server2")
-      }
-      it 'should set the server_name atttribute' do
-        server.server_name.should == 'server2'
-      end
-
-      it 'should set the server_id atttribute' do
-        server.server_id.should be_nil
-      end
-    end
-
-  end
-
-  describe '#exists?' do
-    context "with an existing server" do
-      let!(:server) {
-        Raca::Server.new(account, :ord, "server1")
-      }
-
-      it 'should return true' do
-        server.exists?.should be_true
-      end
-    end
-
-    context "with an new server" do
-      let!(:server) {
-        Raca::Server.new(account, :ord, "server2")
-      }
-
-      it 'should return false' do
-        server.exists?.should be_false
-      end
-    end
-  end
-
-  describe '#create' do
-
-    context "with an existing server" do
-      let!(:server) { Raca::Server.new(account, :ord, "server1") }
-
-      it 'should return raise an exception' do
-        lambda {
-          server.create(1024, "LTS")
-        }.should raise_error(ArgumentError)
-      end
-    end
-
-    context "with an new server" do
-      let!(:server) { Raca::Server.new(account, :ord, "server2") }
-
-      it 'should raise an exception when passed an invalid flavour' do
-        lambda {
-          server.create(1024, "LTS")
-        }.should raise_error(ArgumentError)
-      end
-
-      it 'should raise an exception when passed an invalid image' do
-        lambda {
-          server.create(256, "RedHat")
-        }.should raise_error(ArgumentError)
-      end
-
-      it 'should return the ID of the new server' do
-        server.create(256, "LTS").should == 456
-      end
-
-      it 'should store the ID of the new server' do
-        server.server_id.should be_nil
-        server.create(256, "LTS")
-        server.server_id.should == 456
-      end
-    end
   end
 
   describe '#details' do
 
     context "with an existing server" do
-      let!(:server) { Raca::Server.new(account, :ord, "server1") }
+      let!(:server) { Raca::Server.new(account, :ord, "123") }
 
       it 'should return a hash of interesting data' do
         server.details.should be_a(Hash)
         server.details["status"].should == "ACTIVE"
       end
     end
-
-    context "with a new server" do
-      let!(:server) { Raca::Server.new(account, :ord, "server2") }
-
-      it 'should raise an exception' do
-        lambda {
-          server.details
-        }.should raise_error(ArgumentError)
-      end
-
-    end
   end
 
   describe '#delete!' do
 
     context "with an existing server" do
-      let!(:server) { Raca::Server.new(account, :ord, "server1") }
+      let!(:server) { Raca::Server.new(account, :ord, "123") }
 
       it 'should return true' do
         server.delete!.should be_true
       end
     end
 
-    context "with a new server" do
-      let!(:server) { Raca::Server.new(account, :ord, "server2") }
-
-      it 'should raise an exception' do
-        lambda {
-          server.delete!
-        }.should raise_error(ArgumentError)
-      end
-
-    end
   end
 end
