@@ -1,4 +1,6 @@
 v0.2.0 (19th March 2014)
+* Breaking API changes to Raca::Servers and Raca:Server
+  * Moved the create() method from Server to Servers
 * Added Raca::Account#service_names
 * Stop returning HTTP response objects from many methods on Raca::Container
 * Added some custom error classes for common issues (timeouts, 404s, etc) to
